// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlignRight([2,3]) DOUBLE [Simple 2x2] 1`] = `
[
  "╔════════╦════════╦═════════╦════════╗",
  "║Column 1║Column 2║Column 3A║Column 4║",
  "╠════════╬════════╬═════════╬════════╣",
  "║Left    ║Ctr     ║      Ctr║   Right║",
  "╠════════╬════════╬═════════╬════════╣",
  "║Left 1  ║Ctr2    ║     Ctr3║ Right 4║",
  "╚════════╩════════╩═════════╩════════╝",
]
`;

exports[`AlignRight([2,3]) HORIZONTAL_DOUBLE_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "╒════════╤════════╤═════════╤════════╕",
  "│Column 1│Column 2│Column 3A│Column 4│",
  "╞════════╪════════╪═════════╪════════╡",
  "│Left    │Ctr     │      Ctr│   Right│",
  "╞════════╪════════╪═════════╪════════╡",
  "│Left 1  │Ctr2    │     Ctr3│ Right 4│",
  "╘════════╧════════╧═════════╧════════╛",
]
`;

exports[`AlignRight([2,3]) HORIZONTAL_THICK_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "┍━━━━━━━━┯━━━━━━━━┯━━━━━━━━━┯━━━━━━━━┑",
  "│Column 1│Column 2│Column 3A│Column 4│",
  "┝━━━━━━━━┿━━━━━━━━┿━━━━━━━━━┿━━━━━━━━┥",
  "│Left    │Ctr     │      Ctr│   Right│",
  "┝━━━━━━━━┿━━━━━━━━┿━━━━━━━━━┿━━━━━━━━┥",
  "│Left 1  │Ctr2    │     Ctr3│ Right 4│",
  "┕━━━━━━━━┷━━━━━━━━┷━━━━━━━━━┷━━━━━━━━┙",
]
`;

exports[`AlignRight([2,3]) HORIZONTAL_THIN_VERTICAL_DOUBLE [Simple 2x2] 1`] = `
[
  "╓────────╥────────╥─────────╥────────╖",
  "║Column 1║Column 2║Column 3A║Column 4║",
  "╟────────╫────────╫─────────╫────────╢",
  "║Left    ║Ctr     ║      Ctr║   Right║",
  "╟────────╫────────╫─────────╫────────╢",
  "║Left 1  ║Ctr2    ║     Ctr3║ Right 4║",
  "╙────────╨────────╨─────────╨────────╜",
]
`;

exports[`AlignRight([2,3]) HORIZONTAL_THIN_VERTICAL_THICK [Simple 2x2] 1`] = `
[
  "┎────────┰────────┰─────────┰────────┒",
  "┃Column 1┃Column 2┃Column 3A┃Column 4┃",
  "┠────────╂────────╂─────────╂────────┨",
  "┃Left    ┃Ctr     ┃      Ctr┃   Right┃",
  "┠────────╂────────╂─────────╂────────┨",
  "┃Left 1  ┃Ctr2    ┃     Ctr3┃ Right 4┃",
  "┖────────┸────────┸─────────┸────────┚",
]
`;

exports[`AlignRight([2,3]) INNER_DOUBLE_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌────────╥────────╥─────────╥────────┐",
  "│Column 1║Column 2║Column 3A║Column 4│",
  "╞════════╬════════╬═════════╬════════╡",
  "│Left    ║Ctr     ║      Ctr║   Right│",
  "╞════════╬════════╬═════════╬════════╡",
  "│Left 1  ║Ctr2    ║     Ctr3║ Right 4│",
  "└────────╨────────╨─────────╨────────┘",
]
`;

exports[`AlignRight([2,3]) INNER_DOUBLE_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭────────╥────────╥─────────╥────────╮",
  "│Column 1║Column 2║Column 3A║Column 4│",
  "╞════════╬════════╬═════════╬════════╡",
  "│Left    ║Ctr     ║      Ctr║   Right│",
  "╞════════╬════════╬═════════╬════════╡",
  "│Left 1  ║Ctr2    ║     Ctr3║ Right 4│",
  "╰────────╨────────╨─────────╨────────╯",
]
`;

exports[`AlignRight([2,3]) INNER_THICK_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌────────┰────────┰─────────┰────────┐",
  "│Column 1┃Column 2┃Column 3A┃Column 4│",
  "┝━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┥",
  "│Left    ┃Ctr     ┃      Ctr┃   Right│",
  "┝━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┥",
  "│Left 1  ┃Ctr2    ┃     Ctr3┃ Right 4│",
  "└────────┸────────┸─────────┸────────┘",
]
`;

exports[`AlignRight([2,3]) INNER_THICK_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭────────┰────────┰─────────┰────────╮",
  "│Column 1┃Column 2┃Column 3A┃Column 4│",
  "┝━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┥",
  "│Left    ┃Ctr     ┃      Ctr┃   Right│",
  "┝━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┥",
  "│Left 1  ┃Ctr2    ┃     Ctr3┃ Right 4│",
  "╰────────┸────────┸─────────┸────────╯",
]
`;

exports[`AlignRight([2,3]) INNER_THIN_OUTER_DOUBLE [Simple 2x2] 1`] = `
[
  "╔════════╤════════╤═════════╤════════╗",
  "║Column 1│Column 2│Column 3A│Column 4║",
  "╟────────┼────────┼─────────┼────────╢",
  "║Left    │Ctr     │      Ctr│   Right║",
  "╟────────┼────────┼─────────┼────────╢",
  "║Left 1  │Ctr2    │     Ctr3│ Right 4║",
  "╚════════╧════════╧═════════╧════════╝",
]
`;

exports[`AlignRight([2,3]) INNER_THIN_OUTER_THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━┯━━━━━━━━┯━━━━━━━━━┯━━━━━━━━┓",
  "┃Column 1│Column 2│Column 3A│Column 4┃",
  "┠────────┼────────┼─────────┼────────┨",
  "┃Left    │Ctr     │      Ctr│   Right┃",
  "┠────────┼────────┼─────────┼────────┨",
  "┃Left 1  │Ctr2    │     Ctr3│ Right 4┃",
  "┗━━━━━━━━┷━━━━━━━━┷━━━━━━━━━┷━━━━━━━━┛",
]
`;

exports[`AlignRight([2,3]) THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━┳━━━━━━━━┳━━━━━━━━━┳━━━━━━━━┓",
  "┃Column 1┃Column 2┃Column 3A┃Column 4┃",
  "┣━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┫",
  "┃Left    ┃Ctr     ┃      Ctr┃   Right┃",
  "┣━━━━━━━━╋━━━━━━━━╋━━━━━━━━━╋━━━━━━━━┫",
  "┃Left 1  ┃Ctr2    ┃     Ctr3┃ Right 4┃",
  "┗━━━━━━━━┻━━━━━━━━┻━━━━━━━━━┻━━━━━━━━┛",
]
`;

exports[`AlignRight([2,3]) THIN [Simple 2x2] 1`] = `
[
  "┌────────┬────────┬─────────┬────────┐",
  "│Column 1│Column 2│Column 3A│Column 4│",
  "├────────┼────────┼─────────┼────────┤",
  "│Left    │Ctr     │      Ctr│   Right│",
  "├────────┼────────┼─────────┼────────┤",
  "│Left 1  │Ctr2    │     Ctr3│ Right 4│",
  "└────────┴────────┴─────────┴────────┘",
]
`;

exports[`AlignRight([2,3]) THINCURVE [Simple 2x2] 1`] = `
[
  "╭────────┬────────┬─────────┬────────╮",
  "│Column 1│Column 2│Column 3A│Column 4│",
  "├────────┼────────┼─────────┼────────┤",
  "│Left    │Ctr     │      Ctr│   Right│",
  "├────────┼────────┼─────────┼────────┤",
  "│Left 1  │Ctr2    │     Ctr3│ Right 4│",
  "╰────────┴────────┴─────────┴────────╯",
]
`;

exports[`AlignRight([2,3]) VERTICALBAR_PLUS_MINUS [Simple 2x2] 1`] = `
[
  "+--------+--------+---------+--------+",
  "|Column 1|Column 2|Column 3A|Column 4|",
  "+--------+--------+---------+--------+",
  "|Left    |Ctr     |      Ctr|   Right|",
  "+--------+--------+---------+--------+",
  "|Left 1  |Ctr2    |     Ctr3| Right 4|",
  "+--------+--------+---------+--------+",
]
`;
